--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <div id="info">
         <h1>口红颜色可视化</h1>
         <div id="link">
-            <a href="https://github.com/Ovilia/lipstick">GitHub</a>
-            <a href="http://zhangwenli.com">作者：@羡辙</a>
+            <a href="#">GitHub</a>
+            <a href="#">作者：@孟杰</a>
         </div>
     </div>
 
